<resources>
    <string name="app_name">TraffiKing</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoiam55YXZvIiwiYSI6ImNrazlxeDFrbTBnMXkydW51enp6b2I4ZTQifQ.-S7B4qwXN1dbdguZ7Jrp8g</string>
    <string name="login_label">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_pass">Forgot password ?</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="github">Github</string>
    <string name="phone">Phone</string>
    <string name="already_account">Already have an account ?</string>
    <string name="confirm_usage_policy">I agree with the usage policies and privacy terms ?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="error_email">Enter correct email</string>
    <string name="error_password">Password must be at minimum 8 length</string>
    <string name="error_passwordConfirm">Does not match password</string>
    <string name="error_field">This field must be filled</string>
    <string name="registration_progress">You are being registered...</string>
    <string name="reg_progress_title">Registration</string>
    <string name="registration_success">Registration successful</string>
    <string name="login_progress">You are being logged in...</string>
    <string name="login_success">Login successful</string>
</resources>